--- a/CDM.html
+++ b/CDM.html
@@ -32,7 +32,7 @@
                             </button>
                         </div>
 
-                        <p class='heading'>CROSS DOMINION MINISTRIES</p>
+                        <p class='heading hidden-xs'>CROSS DOMINION MINISTRIES</p>
                         <div id="collapsable-nav" class="collapse navbar-collapse">
                             <ul id="nav-list" class="nav navbar-nav navbar-right">
                                 <li><a href="https://chat.whatsapp.com/FUn6n3ojX3P7FuaIOPof66" target="_blank">Join Us</a></li>
@@ -51,7 +51,7 @@
     <div id="call-btn" class="visible-xs">
         <a class="btn" href="tel:+233-261-578-510">
         <span class="glyphicon glyphicon-earphone"></span>
-        +233-546-396-053
+        +233-261-578-510
         </a>
     </div>
     <div id="xs-deliver" class="text-center visible-xs">Be Blessed</div>
@@ -89,10 +89,10 @@
                     <div class="bible">
                         <h4>BIBLE LESSON:</h4>
                         <div class="col-md-4">
-                        <script src="http://www.verse-a-day.com/js/NIV.js"></script>
+                        <script src="http://www.verse-a-day.com/js/NIV01.js"></script>
                         </div>
                         <div class="col-md-4">
-                        <script src="http://www.verse-a-day.com/js/NKJV.js"></script>
+                        <script src="http://www.verse-a-day.com/js/KJV04.js"></script>
                         </div>
                         <div class="col-md-4">
                         <script src="http://www.verse-a-day.com/js/NLT.js"></script>
