--- a/CDM.html
+++ b/CDM.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="css/styles.css">
     <link href='https://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css'>
     <link href='https://fonts.googleapis.com/css?family=Lora' rel='stylesheet' type='text/css'>
-    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -22,16 +22,17 @@
             <div class="container">
                 <div>
                     <div class='center'>
-                        <a href="#"><img src="images/cmd.png" height="300px" width="300px"alt="logo"></a>
                         <div class="navbar-header">
-                            <button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapsable-nav" aria-expanded="false">
+                            <button id="navbarToggle" type="button" class="navbar-toggle collapsed" data-toggle="collapse"
+                                data-target="#collapsable-nav" aria-expanded="false">
                                 <span class="sr-only">Toggle navigation</span>
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                                 <span class="icon-bar"></span>
                             </button>
                         </div>
-
+                        <a href="#"><img class='animate' src="images/cmd.png" height="300px" width="300px"alt="logo"></a>
+                        
                         <p class='heading hidden-xs'>CROSS DOMINION MINISTRIES</p>
                         <div id="collapsable-nav" class="collapse navbar-collapse">
                             <ul id="nav-list" class="nav navbar-nav navbar-right">
@@ -118,22 +119,22 @@
                     <h3>MIGHTY MEN</h3>
                     <div class="individual">
                         <span class='col-md-3 col-sm-6 col-xs-6 center'>
-                            <img src="cdm/ref 5.png" alt="" class='hidden-xs hidden-sm'>
+                            <img src="cdm/ref 5.png" alt="" class='mm hidden-xs hidden-sm'>
                             <div>McJordan Odai</div>
                             <div class="position">Legon Campus President</div>
                         </span>
                         <span class='col-md-3 col-sm-6 col-xs-6  center'>
-                            <img src="cdm/ref 3.png" alt="" class='hidden-xs hidden-sm'>
+                            <img src="cdm/ref 3.png" alt="" class='mm hidden-xs hidden-sm'>
                             <div>Terry Sagoe</div>
                             <div class="position">Vice Campus President</div>
                         </span>
                         <span class='col-md-3 col-sm-6 col-xs-6  center'>
-                            <img src="cdm/ref 4.png" alt="" class='hidden-xs hidden-sm'>
+                            <img src="cdm/ref 4.png" alt="" class='mm hidden-xs hidden-sm'>
                             <div>Marquaye Elliot</div>
                             <div class="position">Worship & Praise Lead</div>
                         </span>
                         <span class='col-md-3 col-sm-6 col-xs-6  center'>
-                            <img src="cdm/ref 6.png " alt="" class='hidden-xs hidden-sm'>
+                            <img src="cdm/ref 6.png " alt="" class='mm hidden-xs hidden-sm'>
                             <div>Wilson Sarpong</div>
                             <div class="position">Church Organiser</div>
                         </span>
@@ -180,6 +181,11 @@
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3970.3226134443694!2d-0.18430968523356137!3d5.666404395892657!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdf9c8ca8531efd%3A0x1ee13ce1702f013b!2sT%20F%20Hostels!5e0!3m2!1sen!2sgh!4v1625770924741!5m2!1sen!2sgh"
                         width="220" height="120" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
                 </section>
+            </div>
+            <div class="media">
+                <a href="https://web.facebook.com/crossdominionministries/?_rdc=1&_rdr" class="fa fa-facebook" target="_blank"></a>
+                <a href="https://www.instagram.com/crossdominion/?hl=en" class="fa fa-instagram" target="_blank"></a> 
+                <a href="#" class="fa fa-twitter"></a>
             </div>
             <div class="text-center">&copy; Copyright CROSS DOMINION MINISTRIES, 2021</div>
         </div>
