--- a/CDM.html
+++ b/CDM.html
@@ -66,19 +66,14 @@
                     </div>
                     <div class="col-sm-6 col-md-8">
                         <h3>ABOUT CDM</h3>
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Quibusdam labore non tempora laborum praesentium mollitia doloremque accusantium animi! Voluptate aut fugit tenetur reprehenderit, omnis quasi quidem. Nam itaque nemo qui?
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta eveniet blanditiis quidem esse atque in provident
-                            distinctio minus nisi? In, exercitationem dolorem eveniet maxime ex optio ut quas. Iure, ex.
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta eveniet blanditiis quidem esse atque in provident
-                            distinctio minus nisi? In, exercitationem dolorem eveniet maxime ex optio ut quas. Iure, ex.
-                            <span class="hidden-sm hidden-xs">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta eveniet blanditiis quidem esse atque in provident
-                            distinctio minus nisi? In, exercitationem dolorem eveniet maxime ex optio ut quas. Iure, ex.
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta eveniet blanditiis quidem esse atque in provident
-                            distinctio minus nisi? In, exercitationem dolorem eveniet maxime ex optio ut quas. Iure, ex.
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta eveniet blanditiis quidem esse atque in provident
-                            distinctio minus nisi? In, exercitationem dolorem eveniet maxime ex optio ut quas. Iure, ex.
-                            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Dicta eveniet blanditiis quidem esse atque in provident
-                            distinctio minus nisi? In, exercitationem dolorem eveniet maxime ex optio ut quas. Iure, ex.rey</span>                        
+                        <p>As a christian, we are called to walk in Dominion. Every Kingdom is governed by a King. The King is the Supreme force that takes care of 
+                            it's citizens. The agenda of Kingdom advancement will be fulfilled when we become Kingdom-minded; putting the Kingdom first in all things.
+                            It is our responsibility to support the growth of the Kingdom in our hearts and communities. Cross Dominion Church provides the opportunity 
+                            to do these and more. We are a church of the pure biblical works of God. You are very welcome to partake in the Lord's worship.
+                            Each and every sunday is a time of Word and Power at the towers of University of Ghana.
+                            <span class="hidden-sm hidden-xs"> Word from Ps Derrick: The Bible you are holding was founded by the blood of martyrs who were burnt,
+                            killed in dark prisons and fed to wild lions. How will these martyrs feel when you don't read the Bible upon all the sacrifices they made
+                            to preserve this book?</span>                        
                         </p>
                     </div>
                 </div>
