--- a/CDM.html
+++ b/CDM.html
@@ -71,7 +71,7 @@
                             It is our responsibility to support the growth of the Kingdom in our hearts and communities. Cross Dominion Church provides the opportunity 
                             to do these and more. We are a church of the pure biblical works of God. You are very welcome to partake in the Lord's worship.
                             Each and every sunday is a time of Word and Power at the towers of University of Ghana.
-                            <span class="hidden-sm hidden-xs"> Word from Ps Derrick: The Bible you are holding was founded by the blood of martyrs who were burnt,
+                            <span class="hidden-sm hidden-xs"> <br>Word from Ps Derrick: The Bible you are holding was founded by the blood of martyrs who were burnt,
                             killed in dark prisons and fed to wild lions. How will these martyrs feel when you don't read the Bible upon all the sacrifices they made
                             to preserve this book?</span>                        
                         </p>
