--- a/CDM.html
+++ b/CDM.html
@@ -67,7 +67,7 @@
                     <div class="col-sm-6 col-md-8">
                         <h3>ABOUT CDM</h3>
                         <p>As a christian, we are called to walk in Dominion. Every Kingdom is governed by a King. The King is the Supreme force that takes care of 
-                            it's citizens. The agenda of Kingdom advancement will be fulfilled when we become Kingdom-minded; putting the Kingdom first in all things.
+                            its citizens. The agenda of Kingdom advancement will be fulfilled when we become Kingdom-minded; putting the Kingdom first in all things.
                             It is our responsibility to support the growth of the Kingdom in our hearts and communities. Cross Dominion Church provides the opportunity 
                             to do these and more. We are a church of the pure biblical works of God. You are very welcome to partake in the Lord's worship.
                             Each and every sunday is a time of Word and Power at the towers of University of Ghana.
